# SafeGuard

./: .gitignore  CMakeLists.txt  TODO
src/: CMakeLists.txt  main.cpp
src/Common/: CMakeLists.txt
src/Common/include/Common/: AppInfo.h  BiMap.hpp  IFilesystem.h  Logger.h  Singleton.h  ThreadPool.h  Utils.h
src/Common/src/: IFilesystem.cpp  Logger.cpp  Utils.cpp
src/Inference/: CMakeLists.txt
src/Inference/include/Inference/: Framework.h  InferenceContext.h  InferenceEngine.h  PrePostProcessor.h
src/Inference/include/Inference/Algorithms/: AlgorithmsFactory.h  RTDetr.h  SampleAlgo.h  SampleYOLO.h  YOLOv3.h  YOLOv5.h  YOLOv8.h
src/Inference/include/Inference/Base/: BoundingBox.h  ElementType.h  ModelMetadata.h  Shape.h  Tensor.h
src/Inference/include/Inference/LowerFramework/: FONNXRuntime.h  FOpenVINO.h  LowerFrameworkFactory.h
src/Inference/src/: Framework.cpp  FrameworkImpl.h  ImageOps.cpp  ImageOps.h  InferenceEngine.cpp  InferenceEngineImpl.cpp  InferenceEngineImpl.h  PrePostProcessor.cpp  PrePostProcessorImpl.h
src/Inference/src/Algorithms/: AlgorithmsFactory.cpp  RTDetr.cpp  SampleAlgo.cpp  SampleYOLO.cpp  YOLOv3.cpp  YOLOv5.cpp  YOLOv8.cpp
src/Inference/src/Base/: ElementType.cpp  Shape.cpp  Tensor.cpp
src/Inference/src/LowerFramework/: FONNXRuntime.cpp  FOpenVINO.cpp  LowerFrameworkFactory.cpp
src/Networks/: CMakeLists.txt
src/Networks/include/Networks/: FileFilter.h  FileUploadFilter.h  FileUploadHandler.h  HttpRequest.h  HttpRequestParser.h  HttpResponse.h  ImageFilter.h  MainWebPageHandler.h  Noncopyable.h  ResponseJsonBuilder.h  SuffixFilter.h  WebPageHandler.h  WebSocketHandler.h
src/Networks/src/: FileFilter.cpp  FileUploadFilter.cpp  FileUploadHandler.cpp  HttpRequest.cpp  HttpRequestParser.cpp  HttpResponse.cpp  ImageFilter.cpp  MainWebPageHandler.cpp  ResponseJsonBuilder.cpp  SuffixFilter.cpp  WebPageHandler.cpp  WebSocketHandler.cpp
test/: CMakeLists.txt
test/Inference_test/: CMakeLists.txt  Inference_test.cpp
